<?xml version="1.0"?>
<package format="2">
  <name>mrobot_description</name>
  <version>0.0.0</version>
  <description>The mrobot_description package</description>

  <!-- You can check the source address:  -->
  <!-- robot_mrobot/mrobot_description directory in  -->
  <!-- https://github.com/huchunxu/ros_exploring.git  -->

  <author>esy</author>
  <maintainer email="esy_183@163.com">esy</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
