<?xml version="1.0"?>
<package format="2">
  <name>mrobot_navigation</name>
  <version>0.0.0</version>
  <description>The mrobot_navigation package</description>

  <author>esy</author>
  <maintainer email="esy_183@163.com">esy</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gmapping</exec_depend>
</package>
